@@ -5,6 +5,8 @@ Revision history for Perl extension RPi::WiringPi.
         - clean up the way _fatal_exit() works. There's more to do here
         - tidy how the RPI_PINS env var is worked on in certain Util:: methods
         - incorporated RPi::I2C; updated POD and FAQ
+        - added t/65-i2c.t for the I2C stuff. Requires an Arduino. See
+          examples/arduino.ino for details
 
 2.3615  2017-06-22
         - fixed issues with specific pins in test diagram for DAC (closes #29)
